added gui stuff