@@ -20,6 +20,8 @@
         <junit.version>4.12</junit.version>
         <commonsio.version>2.6</commonsio.version>
         <unirest.version>1.4.9</unirest.version>
+        <gson.version>2.8.5</gson.version>
+        <guice.version>4.2.0</guice.version>
     </properties>
 
     <scm>
@@ -72,6 +74,11 @@
             <version>${json.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
@@ -83,6 +90,11 @@
             <version>${commonsio.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guice.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -93,6 +105,19 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <compilerArgs>
+                        <arg>--add-modules=javafx.base</arg>
+                        <arg>--add-modules=javafx.fxml</arg>
+                        <arg>--add-modules=javafx.graphics</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -120,7 +145,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ch.rootlogin.godocstore.viewer.Main</mainClass>
+                                    <mainClass>ch.rootlogin.godocstore.viewer.GUI</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
